.provarCaches/00D410000011HE0EAM/objects/rstk__customext__c.object
<CustomObject>
    <fields>
        <fullName>rstk__stdcost_movecoststostdcostsimelems__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Move Costs to Simulated Cost Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__stdcost_rollupforindividualicitemid__c</fullName>
        <inlineHelpText>This represents the ID of an individual inventory item for which the cost rollup needs to be performed.</inlineHelpText>
        <label>Rollup for an Individual Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__stdcost_usetodaysdate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, if a Set Standard Costs from Simulated has been run today, those records will be updated if appropriate. When not checked, if a prior Set Standard Costs from Simulated run was done today, those records would not be updated with this run.</inlineHelpText>
        <label>Use Today&apos;s Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sycmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstk__sycmp__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SYDATA - System Transaction Object</label>
        <referenceTo>rstk__sydata__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>customexts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sydiv_ufmethod__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Usage Forecast Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prior Year Month to Month</fullName>
                </value>
                <value>
                    <fullName>Average of Prior Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sydiv_ufmonths__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Number of Months to Generate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sydiv_ufpriormonths__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Number of Prior Months for Average</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__taclockon_txncomments__c</fullName>
        <label>Transactional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__toItemNum__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>To Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__transexport_begindate__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Beginning Transaction (Accounting) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__transexport_comments__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Batch Header Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__transexport_enddate__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Ending Transaction (Accounting) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__transexport_exportcosttrans__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Export Cost Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__transexport_exportpayableinvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Export Payable Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__transexport_exportsalesinvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Export Sales Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__usage_icitem__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>ICITEM Usage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__user_syusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Planner</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Custom Extensions</relationshipLabel>
        <relationshipName>Custom_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__usertimeentry_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__usertimeentry_currenthours__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Current Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__usertimeentry_started__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__wocst_status__c</fullName>
        <inlineHelpText>TBD</inlineHelpText>
        <label>Work Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2-Firm</fullName>
                </value>
                <value>
                    <fullName>3-Allocated</fullName>
                </value>
                <value>
                    <fullName>4-Ready for activity</fullName>
                </value>
                <value>
                    <fullName>5-Pick List records generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Extension</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__formula_extid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>customext Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>